   * Add CLI param /deletecontains:word - thx sweetngx
   * Add ignore white space to compare - thx Leon
   * Enable "Audio to text" for Linux - thx edcol/coastal45
   * Add "Allow overlap" in "Change speed" - thx OmrSi
   * Add bookmarks to spell check dialog - thx cyzs233/OmrSi 
   * Add dictate shortcut for main text box - thx Xenos71
* IMPROVED:
   * Update Polish translation - thx admas
   * Update Bulgarian translation - thx Калин
   * Update Chinese translation - thx nkh0472
   * Update Italian translation - thx bovirus
   * Update Korean translation - thx domddol
   * Update Portuguese translation - thx hugok79
   * Update French translation - the Peirre
   * Add error label for "Batch convert" - thx Leon
   * Batch convert: Improved "Remove lines with style/actor"
   * Allow empty split for "split at video/cursor" - thx OmrSi
   * Improve fullscreen play video size with mpv - thx GrampaWildWilly
   * Can detect Tesseract 5 on Linux - thx shag00
   * nOCR selected lines only (list view context menu)
   * Audio to text: Auto select downloaded model after download
   * Allow for multiple X-TIMESTAMP-MAPs in WebVTT - thx doctorm
   * Use subtitle file name for blank video - thx OmrSi
   * Add list view column sort to "File - Plugins"
   * Add "Use once" button for binary image compare - thx Flitskikker
* FIXED:
   * Fix crash with large files (+25GB) in burn-in - thx OmrSi  
   * Fix crash when switching text-boxes/list-view-items - thx Leon
   * Fix minor bug for shortcut "Go to prev line and play" - thx nissansz
   * Fix minor issue with "FCE:Remove dash single line" - thx Minherre  
   * Re-add FinalCutProXml properties - thx hu
   * Don't check "Continuation style" when merging dialog - thx OmrSi 
   * Fix ASSA background box issue - thx Érico
   * Fix "*" showing in titlebar after offsetting with no change - thx OmrSi
   * Fix issues with NQC shot change rules - thx OmrSi
   * Fix UI issue in copy-paste translate